# snitch-llvm

./: .gitignore  .gitlab-ci.yml  README.md  testfile.cpp
.github/: pull_request_template.md
.github/docker/: linux-centos7.Dockerfile  linux-ubuntu2004.Dockerfile
.github/scripts/: build-riscv32-llvm.sh  builder-info.sh
.github/workflows/: ci.yml  clang-tests.yml  libclang-abi-tests.yml  libclc-tests.yml  lint.yml  lld-tests.yml  lldb-tests.yml  llvm-tests.yml  release.yml
.gitlab-ci.d/: .gitignore  Makefile  Memora.yml  env-iis.mk  memora_retry.sh  test-new.sh
.gitlab/merge_request_templates/: Default.md
clang/include/clang/: module.modulemap
clang/include/clang/AST/: ASTContext.h  OpenMPClause.h  RecursiveASTVisitor.h  Type.h
clang/include/clang/Basic/: Attr.td  AttrDocs.td  BuiltinsRISCV.def  DiagnosticDriverKinds.td  DiagnosticSemaKinds.td  HEROHeterogeneous.h  TargetBuiltins.h  TargetInfo.h  TokenKinds.def
clang/include/clang/Driver/: Options.td
clang/include/clang/Parse/: FrepHint.h  Parser.h
clang/include/clang/Sema/: Sema.h
clang/include/clang/Serialization/: ASTBitCodes.h
clang/lib/AST/: ASTContext.cpp  ASTDiagnostic.cpp  OpenMPClause.cpp  StmtProfile.cpp  Type.cpp
clang/lib/Basic/: CMakeLists.txt  HEROHeterogeneous.cpp  OpenMPKinds.cpp  TargetInfo.cpp
clang/lib/Basic/Targets/: RISCV.cpp  RISCV.h
clang/lib/CodeGen/: BackendUtil.cpp  CGBuiltin.cpp  CGCall.cpp  CGExpr.cpp  CGExprScalar.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGStmt.cpp  CGStmtOpenMP.cpp  CodeGenFunction.h
clang/lib/Driver/: CMakeLists.txt  Driver.cpp
clang/lib/Driver/ToolChains/: BareMetal.cpp  Clang.cpp  Gnu.cpp  HeroCommon.h  HeroDevice.cpp  HeroDevice.h  HeroHost.cpp  HeroHost.h  HeroPULP.cpp  HeroPULP.h  HeroSnitch.cpp  HeroSnitch.h  RISCVToolchain.cpp  RISCVToolchain.h
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Parse/: ParseOpenMP.cpp  ParsePragma.cpp  ParseStmt.cpp
clang/lib/Sema/: Sema.cpp  SemaChecking.cpp  SemaDecl.cpp  SemaExpr.cpp  SemaInit.cpp  SemaOpenMP.cpp  SemaOverload.cpp  SemaStmtAttr.cpp  TreeTransform.h
clang/lib/Serialization/: ASTReader.cpp  ASTWriter.cpp
clang/test/CodeGen/RISCV/: riscv-sdma-intrinsics.c  riscv-ssr-intrinsics.c  riscv-xpulpmacsi-intrinsics-diag.c  riscv-xpulpmacsi-intrinsics.c  riscv-xpulppostmod-intrinsics-diag.c  riscv-xpulppostmod-intrinsics.c  riscv-xpulpv2-intrinsics-diag.c  riscv-xpulpv2-intrinsics.c
clang/test/Driver/: riscv-arch.c
clang/test/Misc/: target-invalid-cpu-note.c
clang/test/Preprocessor/: riscv-nofdiv.c
clang/tools/clang-fuzzer/handle-llvm/: handle_llvm.cpp
clang/tools/libclang/: CIndex.cpp
flang/lib/Semantics/: check-omp-structure.cpp
lld/ELF/: LinkerScript.cpp  LinkerScript.h
lld/ELF/Arch/: RISCV.cpp
lld/test/ELF/: tls.s
lld/test/ELF/linkerscript/: multiple-tbss.s  tbss.s
llvm/docs/tutorial/MyFirstLanguageFrontend/: LangImpl08.rst
llvm/examples/Kaleidoscope/Chapter8/: toy.cpp
llvm/include/llvm/ADT/: Triple.h
llvm/include/llvm/Analysis/: AffineAccessAnalysis.h
llvm/include/llvm/CodeGen/: ParallelCG.h  TargetLowering.h
llvm/include/llvm/IR/: IntrinsicsRISCV.td  IntrinsicsRISCVXpulp.td  IntrinsicsRISCVXsnitch.td
llvm/include/llvm/Support/: RISCVTargetParser.def
llvm/lib/Analysis/: AffineAccessAnalysis.cpp  CMakeLists.txt
llvm/lib/CodeGen/: ParallelCG.cpp  PostRASchedulerList.cpp
llvm/lib/CodeGen/SelectionDAG/: SelectionDAG.cpp
llvm/lib/Frontend/OpenMP/: OMPIRBuilder.cpp
llvm/lib/LTO/: LTOBackend.cpp  LTOCodeGenerator.cpp  ThinLTOCodeGenerator.cpp
llvm/lib/Passes/: CMakeLists.txt  PassBuilder.cpp  PassBuilderPipelines.cpp  PassRegistry.def
llvm/lib/Support/: RISCVISAInfo.cpp  Signals.cpp  TargetParser.cpp  Triple.cpp
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/SSR/: CMakeLists.txt  SSRGeneration.cpp  SSRInference.cpp
llvm/lib/Transforms/Scalar/: CMakeLists.txt  TreeHeightReduction.cpp
llvm/lib/Transforms/Utils/: BuildLibCalls.cpp  CodeExtractor.cpp  SimplifyLibCalls.cpp
llvm/test/: lit.cfg.py
llvm/test/CodeGen/RISCV/: O0-pipeline.ll  O3-pipeline.ll  freploop-nested.ll  freploop.ll  nofdiv.ll  pulp-expand-pseudo.mir  pulp-select-pseudo.ll  sdma-intrinsics.ll  sdma-pseudo-instructions.mir  ssr-pseudo-instructions.mir  ssr-register-merging.mir  ssr-register-reserving.ll  xpulp-hwloop.ll  xsmallfloat-inline-asm.ll
llvm/test/LTO/RISCV/: mabi-invalid.ll  mabi.ll
llvm/test/MC/RISCV/: attribute-arch.s  rv32i-invalid.s  rv32xdma-valid.s  rv32xfrep-valid.s  rv32xmempool-invalid.s  rv32xmempool-valid.s  rv32xsmallfloat-valid-pseudo.s  rv32xsmallfloat-valid.s  rv32xssr-valid.s  rv32zquarterinx-invalid.s  rv32zquarterinx-valid.s  rvzquarterinx-aliases-valid.s
llvm/test/Other/: new-pm-defaults.ll  new-pm-thinlto-defaults.ll  new-pm-thinlto-postlink-pgo-defaults.ll  new-pm-thinlto-postlink-samplepgo-defaults.ll
llvm/test/Transforms/TreeHeightReduction/: floating-point-add-only.ll  floating-point-add-with-constant.ll  floating-point-mult-only.ll  floating-point-sub-only.ll  fp16-add-with-constant.ll  fp16-add.ll  fp16-mult.ll  fp16-sub.ll  integer-add-only.ll  integer-add-with-constant.ll  integer-mult-only.ll  integer-sub-only.ll  leaf-num-check.ll  long-double-add-with-constant.ll  long-double-add.ll  long-double-mult.ll  (+1 more)
llvm/tools/llc/: llc.cpp
llvm/tools/llvm-isel-fuzzer/: llvm-isel-fuzzer.cpp
llvm/tools/llvm-opt-fuzzer/: llvm-opt-fuzzer.cpp
llvm/tools/opt/: opt.cpp
llvm/unittests/Support/: RISCVISAInfoTest.cpp
llvm/utils/TableGen/: InfoByHwMode.cpp
mlir/lib/ExecutionEngine/: ExecutionEngine.cpp
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/include/: Debug.h  omptarget.h
openmp/libomptarget/plugins/: CMakeLists.txt
openmp/libomptarget/plugins/hero/: CMakeLists.txt  gomp-constants.h  libgomp-plugin.h  plugin-hero-dev-memcpy.cpp  plugin-hero-dev.cpp  plugin-hero-dev.h  rtl.cpp
openmp/libomptarget/plugins/pulp/: CMakeLists.txt  omptarget.ld  plugin-pulp-hero.cpp  plugin-pulp-hero.h  rtl.cpp
openmp/libomptarget/src/: CMakeLists.txt  device.cpp  interface.cpp  omptarget.cpp  private.h  rtl.cpp
(+69 files in other folders)
